--- a/21cm/21cm-presentation.tex
+++ b/21cm/21cm-presentation.tex
@@ -1,5 +1,6 @@
 \documentclass{beamer}
 \usepackage{sansmathaccent}
+\usepackage{gensymb}
 \pdfmapfile{+sansmathaccent.map}
 \usepackage{comment}
 \usepackage{physics}
@@ -52,6 +53,7 @@
     \item Velocity we observe is the velocity of the mass \textit{projected} onto our line of sight. 
     \item $v_{obs} = \frac{\Theta}{r} R_0 \sin \ell - \Theta_0 \sin \ell$
     \item Relation between $\Theta$ and $r$ obtained through Galactic Rotation Curve.
+    \item Between $90\degree < \ell < 180\degree$, Galactic Rotation Curve is approximately constant.
   \end{itemize} 
 \end{column}
 \end{columns}
