--- a/21cm/21cm-presentation.tex
+++ b/21cm/21cm-presentation.tex
@@ -68,4 +68,34 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Peak in Antenna Readings Signal Hydrogen Density Concentration}
+  \includegraphics[width=1\textwidth]{data_freq.png}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Peak in Antenna Readings Signal Hydrogen Density Concentration}
+  \includegraphics[width=1\textwidth]{data_vel.png}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Sources of Error Largely Due to Unknown Constants}
+  \begin{itemize}
+    \item Velocity of sun lacks certainty, approximately $231 \pm 14$ km/s. 
+      \pause
+    \item Distance from sun to center of galaxy also uncertain, $8.2 \pm 0.5$ kpc. 
+      \pause
+    \item Poissonian uncertainy in number of counts.
+      \pause
+    \item Beam width approximated as constant across five degree bin width - taking into account beam profile would allow for more accurate data analysis
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Hydrogen Mapping to Polar Histogram Indicates Spiral Arm}
+  \includegraphics[width=0.8\textwidth]{final.png}
+\end{frame}
+
+
+
 \end{document}
