--- a/21cm/21cm-presentation.tex
+++ b/21cm/21cm-presentation.tex
@@ -59,8 +59,11 @@
 \begin{column}{0.6\textwidth}
   \begin{itemize}
     \item Velocity we observe is the velocity of the mass \textit{projected} onto our line of sight. 
+      \pause
     \item $v_{obs} = \frac{\Theta}{r} R_0 \sin \ell - \Theta_0 \sin \ell$
+      \pause
     \item Relation between $\Theta$ and $r$ obtained through Galactic Rotation Curve.
+      \pause
     \item Between $90\degree < \ell < 180\degree$, Galactic Rotation Curve is approximately constant.
   \end{itemize} 
 \end{column}
